# xmp-writer

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  main.rs  pdfa.rs  types.rs
